# Project_Hera

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  ]  cursor_pos_update.txt  hera.code-workspace  render.c.backup.txt
assets/: hj.ase  shader.vert  under.aseprite
assets/shaders/: shader.player.vert
backups/assets/shaders/: shader.ui.text.frag
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  logs.txt
build-debug/assets/shaders/: main.frag.glsl  main.vert.glsl  platforms.frag  platforms.vert  shader.brick.vert  terrain.frag.glsl  terrain.vert.glsl
build-debug/assets/test_build/: instanced_mesh.frag  instanced_mesh.vert  main.frag  main.vert
build-debug/assets/textures/: character.aseprite
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-release/assets/shaders/: shader.ui.text.vert  ui.shader.cursor.frag
distrubution/: eennaa 1by1 1.2023.docx  jump.sb3  logs.txt  shader.player.vert
distrubution/assets/shaders/: shader.brick.frag
include/: Scene.h  UI.h  bricks.h  buff.h  camera.h  collider.h  layout.h  levels.h  mesh.h  platforms.h  player.h  renderer.h  shader.h  texture.h  window.h
include/base_engine/: window.hpp
src/: AABB.cpp  AABB.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  Layout.cpp  Layout.hpp  Player.cpp  Player.hpp  RenderUtils.cpp  Shader.cpp  Shader.hpp  Terrain.cpp  Terrain.hpp  Texture.cpp  Texture.hpp  UI.c  Window.cpp  Window.hpp  bricks.c  bricks.c.bak  buff.c  buff.cpp  camera.c  collider.c  layout.c  levels.c  main.c  main.cpp  mesh.c  platforms.c  player.c  rdoc.cpp  rdoc.hpp  renderer.c  (+6 more)
src/base_engine/: window.cpp
tools/: MAP_EDITOR.py
